# thepeak-crawler

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  spotify.py
.github/: pull_request_template.md
docs/: filter-all-songs.sql  songs.csv
json/: December-13-2021.json  December-14-2021.json  December-15-2021.json  December-16-2021.json  December-17-2021.json  December-18-2021.json  December-20-2021.json  December-21-2021.json  December-22-2021.json  December-23-2021.json  December-24-2021.json  December-25-2021.json  December-26-2021.json  December-27-2021.json  December-28-2021.json  December-29-2021.json  December-30-2021.json  December-31-2021.json  January-01-2022.json  January-02-2022.json  January-03-2022.json  January-04-2022.json  January-05-2022.json  January-06-2022.json
migrations/: env.py  script.py.mako
migrations/versions/: b9d519bc4a6d_tracks_table.py
src/: __init__.py  config.py  federation.py  orm.py
src/core/: config.py  orm.py  utils.py
src/core/adapters/: repository.py  unit_of_work.py
src/core/domain/: models.py
src/core/ports/: repository.py  unit_of_work.py  unit_of_work.pyi
src/crawler/: bootstrap.py  config.py  orm.py
src/crawler/adapters/: repository.py  unit_of_work.py  webdriver.py
src/crawler/domain/: models.py
src/crawler/domain/model/: __init__.py  track.py
src/crawler/domain/models/: __init__.py  track.py
src/crawler/migrations/: env.py  script.py.mako
src/crawler/migrations/versions/: 83baf5f3f4ce_create_tracks_table.py
src/crawler/ports/: webdriver.py
tests/: main.py  spotify.py
