[tool.poetry]
name = "thepeak-crawler"
version = "0.1.0"
description = ""
authors = ["William Abreu <william@t10.digital>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
selenium = "^3.141.0"
spotipy = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
