[tool.poetry]
name = "thepeak-crawler"
version = "0.1.0"
description = ""
authors = ["William Abreu <william@t10.digital>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.0"
selenium = "^3.141.0"
spotipy = "^2.19.0"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.4"
psycopg2-binary = "^2.9.1"
kingdom-sdk = "0.3.0dev1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
